# jenkins-cmake-gtest-project2

./: CMakeLists.txt  Jenkinsfile  README.md  azure-pipeline.yaml  build.sh  coco.sh  test.sh
include/: Addition.h
source/: Addition.cpp  CMakeLists.txt
test/: Addition_test.cpp  CMakeLists.txt  main.cpp
